test/should-fail/jfxc3444.visage
/**
 * Regress test for JFXC-3444: attribute invalidate x statements
 *
 * @test/compile-error
 */

invalidate 1; //invalidate argument must be a var
